<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GENEL BİLGİLER</string>
    <string name="app_namee">KELİME ANLAMI</string>
    <string name="ornekone">
        :


Sözcük, çoğu zaman, dilin kendi başına anlamı olan
en küçük parçası, diye tanımlanır.Ağaç, hayal, dost gibi
sözcükler buna örnektir. Bazı sözcükler ise tek başına
anlam taşımayıp diğer sözcüklerle bir araya geldiğinde
belli bir anlam ifade eder: için, gibi, göre vs.
ÖSS’de sözcük anlamına dayalı sorular değişik soru
biçimleriyle karşımıza çıkar. Kimileri “Aşağıdakilerden
hangisinde altı çizili sözcük mecaz anlamıyla
kullanılmıştır?” gibi bilgiye dayalı olduğu halde, kimileri
“Aşağıdakilerden hangisinde “gün” sözü ötekilerden
farklı anlamda kullanılmıştır?” gibi sözcüğün cümle
içindeki yorumuyla ilgilidir. Hatta yoruma dayalı sorular
sözcük anlamıyla ilgili soruların çoğunu oluşturur.
</string>
    <string name="app_nameebaslık2">GERÇEK, MECAZ VE YAN (YAKIŞTIRMA) ANLAM :</string>
    <string name="ıkıncımetın">
Gerçek anlam, bir sözcüğün temel anlamıdır; buna
sözcüğün ilk akla gelen anlamı ya da sözlükteki ilk
anlamı da denir. Bir sözcüğün diğer anlamları gerçek
anlamından yola çıkılarak oluşturulmuştur. Örneğin
“Burun” dendiğinde aklımıza ilk gelen, insanın bir
organıdır. Öyleyse; “Burnundaki benler onu öyle tatlı
gösteriyordu ki…” cümlesindeki “burun” sözü insanın
bir organı anlamında olduğundan gerçek anlamında
kullanılmıştır. Ancak aynı söz; “Bugünlerde burnu
büyüdü kimseleri gözü görmüyor.” cümlesinde insanın
bir organı anlamını vermekten çok uzaktır. Temelde bu,
gerçek anlamdan doğmuş ancak tamamen farklı bir
özellik kazanmıştır.
İşte sözcüğün gerçek anlamından tamamen
uzaklaşarak kazandığı bu anlama mecaz
anlam diyoruz.
Bir de sözün, çoğu kaynağın mecaz anlama dahil ettiği
ancak mecaz anlamdan biraz farklı olması yönüyle yan
anlam ya da yakıştırma diye de anılan bir anlamı vardır.
Yukarıda verdiğimiz “burun” sözünü “Ayakkabımı biraz
küçük almışım; burnu ayağımı sıkıyor.” cümlesinde ele
alalım. Buradaki “burun” sözü gerçek anlamda değildir;
çünkü “insanın bir organı” ifadesini taşımıyor. Tam
olarak mecaz anlama da girmez; çünkü temelde gerçek
anlamla yakın bir ilgisi vardır. Ayakkabının o kısmına
burun denmesinin nedeni insanın burnuna konum
itibariyle benzemesindendir. İşte sözcüğün, gerçek
anlamında karşıladığı varlığa şekil benzerliğinden
dolayı başka bir varlığa verilmesine yan anlam ya
    da yakıştırma denir.</string>
    <string name="app_nameebaslık3"> SOMUT VE SOYUT ANLAM :</string>
    <string name="ucuncumetın">


        Sözcükler varlıkları ve kavramları karşılar. Varlık, madde
olarak bulunan yani duyu organlarıyla algılanabilen
bir nitelik taşır. Örneğin; ağaç, yeşil, kalem gözle;
soğuk, ıslak dokunmayla; ses, gürültü işitmeyle;
koku koklamayla; acı, ekşi tatmayla algılanabilir. İşte
duyu organlarımız yardımıyla algılayabildiğimiz bu
sözcüklere somut anlamlı sözcükler denir.
Oysa üzüntü, sevgi, özlem, hasret, rüya gibi sözcükleri
herhangi bir duyumuzla algılayamayız; bunların sadece
kavram olarak var olduğunu kabul ederiz. İşte bu tür
sözcüklere de soyut anlamlı sözcükler denir.
Bir sözcük her zaman somut olamayacağı gibi her
zaman soyut da değildir. Bir cümlede somut olan
sözcük başka bir cümlede soyut anlam taşıyabilir.
Örneğin; “Bu iki çizgi arasındaki açı kırk beş derece
vardır.” cümlesindeki “açı” sözcüğü ölçülebilen bir
değer taşıdığından somut anlamlıdır. Aynı sözcük “
Sen bu sorunu hangi açıdan ele aldın?” cümlesinde,
ölçülebilen bir değer olmaktan çıkmış, mecaz anlam
kazanarak soyut bir kavramı karşılar duruma gelmiştir.
    </string>
    <string name="app_nameebaslık4">  TERİM ANLAM VE EŞ ANLAMLI:</string>
    <string name="dorduncumetın">
Herhangi bir bilim, sanat ya da meslekle ilgili özel
bir kavramı karşılayan sözcüklere terim denir. Yeni
bulunan bir kavram, yeni bir terimle karşılanabileceği
gibi, günlük hayatta kullanılan bir sözcüğe özel bir
anlam verilerek de karşılanabilir. Örneğin “ağız”
sözü “Adamın ağzında diş kalmamış, hala genç gibi
davranıyor.” cümlesinde gerçek anlamında ve günlük
kullanımıyladır. Aynı söz “İstanbul’da büyümüş; ama
Karadeniz ağzıyla konuşuyor.” cümlesinde dilbilgisinde
bir tanım olan “yöresel konuşmalara dilde verilen
karşılık” anlamına gelerek bir terim oluşturmuş. Ya
da “Irmağın ağzı toprakla dolmuştu.” cümlesinde
olduğu gibi “ırmağın denize karıştığı yer” anlamında
kullanılarak coğrafi bir terim olmuştur.

Aynı kavramı karşılayan farklı sözcükler eş
anlamlıdır. Örneğin “ayakkabı” sözü ile “kundura”
sözü aynı nesneyi karşıladıkları için eş anlamlı sayılır.
Ancak bir sözcük daima başka bir sözcükle eş anlamlı
olmaz. Bazen aynı sözcük farklı cümlelerde eş ya da
farklı anlamlar da taşıyabilir. Cümlenin gelişine göre
eş anlamlılık durumu değişir. Örneğin; “Çocuğun kara
gözleri, büyüleyiciydi.” cümlesindeki “kara” yerine
“siyah” diyebiliriz. Ancak “Ah alnımın kara yazısı!”
sözündeki “kara” yerine “siyah” getirilemez. Çünkü
“kara” sözü cümlelerin ikisinde de farklı anlamlar
veriyor. Dolayısıyla ikinci cümlede mecaz anlama
geldiği için yerine “siyah” sözcüğünü getiremiyoruz.
KARŞIT (ZIT) ANLAM
Birbirine karşıt kavramları karşılayan sözcüklerdir.
Karşıt anlamlı sözcükler iki zıt noktayı belirtirler.
Örneğin; “güzel” sözcüğünün karşıtı “itici” olamaz
çünkü iticilikte sevimsizlik anlamı da vardır. Oysa
“güzel” sözü sevgiyi beraberinde ifade etmez. Bunun
karşıtı ancak “çirkin”dir. Aynı durum eylemlerde
de görülür. Örneğin; “sevmek” eyleminin karşıtı
“sevmemek” değildir. Çünkü “sevmek” iyi bir duygunun
varlığını bildirir. Sevmemekte ise bu duygunun
bulunmadığı anlamı vardır. Oysa karşıtlıkta, olan
duygunun tam karşıtı olmalıdır; bu da “nefret etmek”tir.
Bu nedenle karşıtlıkla olumsuzluğun farkını görmek
        önemlidir.</string>
    <string name="matbır">Temel Kavramlar</string>
    <string name="matbırmetın">
        A. Rakam
Sayıları ifade etmeye yarayan sembollere, rakam denir.
Onluk sayma sisteminde kullanılan rakamlar: 0, 1, 2, 3,
4, 5, 6, 7, 8, 9 dur.
B. Sayı
Bir çokluk belirtecek şeklide, rakamların bir araya
getirilmesiyle oluşan ifadelere, sayı denir.
Örnek:
19, -342, ¼, -⅔, √29, π ifadeleri birer sayıdır.
Uyarı: Her rakam bir sayıdır. Ama her sayı bir rakam
olmayabilir.
Örnek:
a ve b birbirinden farklı birer rakam olmak üzere, a + b
nin alabileceği en büyük ve en küçük değeri bulalım.
Çözüm:
a + b nin en büyük olması için, a ve b nin en büyük
değeri alması gerekir. a ≠ b olduğundan ikisini de 9
alamayız.
O halde, a + b = 9 + 8 = 17 olur.
a + b nin en küçük olması için, a ve b nin en küçük
değeri alması gerekir. a ≠ b olduğundan ikisini de 0
alamayız.
O halde, a + b = 0 + 1 = 1 olur.
C. Sayıların Sınıflandırılması
1. Doğal Sayılar
N = {0, 1, 2, 3, ...} kümesinin herbir elemanına, bir doğal
sayı denir.
2. Sayma Sayılar
N+ = {1, 2, 3, ...} kümesinin herbir elemanına, pozitif
doğal sayılar veya sayma sayılar denir.
3. Tam Sayılar
Z = {..., -2, -1, 0, 1, 2, ...} kümesinin herbir elemanına tam
sayı denir.
Burada,
Z+ = {1, 2, 3, ...} kümesinine, pozitif tam sayılar kümesi
denir.
Z- = {..., -3, -2, -1} kümesine, negatif tam sayılar kümesi
denir.
0 tam sasyısı pozitif veya negatif değildir. Yani,
işaretsizdir.
O halde, Z = Z- U {0} U Z+ dir</string>
    <string name="matıkı">Sayı Basamakları</string>
    <string name="bone">BİLGİSAYAR PROGRAMCILIĞI BÖLÜMLERİ</string>
    <string name="unıone">Bilgisayar Mühendisliği
Bilgisayar Bilimleri
Bilgisayar Teknolojisi ve Bilişim Sistemleri
Bilişim Sistemleri Teknolojileri
Endüstri Mühendisliği
Bilgisayar ve Öğretim Teknolojileri Öğretmenliği
Bilgisayar ve Yazılım Mühendisliği
Bilgisayar-Enformatik
Bilişim Sistemleri Mühendisliği
İstatistik
İstatistik ve Bilgisayar Bilimleri
Kontrol ve Otomasyon Mühendisliği
Fizik
Fizik Mühendisliği
Matematik ve Bilgisayar Bilimleri
Matematik-Bilgisayar
Meteoroloji Mühendisliği
Uzay Mühendisliği
Yazılım Mühendisliği</string>
    <string name="btwo">BİLGİSAYAR PROGRAMCILIĞI AÇIK ÖĞRETİM BÖLÜMLERİ</string>
    <string name="unıtwo">Bilgisayar Mühendisliği
Bilgisayar Bilimleri
Bilgisayar Teknolojisi ve Bilişim Sistemleri
Bilişim Sistemleri Teknolojileri
Endüstri Mühendisliği
Bilgisayar ve Öğretim Teknolojileri Öğretmenliği
Bilgisayar ve Yazılım Mühendisliği
Bilgisayar-Enformatik
Bilişim Sistemleri Mühendisliği
İstatistik
İstatistik ve Bilgisayar Bilimleri
Kontrol ve Otomasyon Mühendisliği
Fizik
Fizik Mühendisliği
Matematik ve Bilgisayar Bilimleri
Matematik-Bilgisayar
Meteoroloji Mühendisliği
Uzay Mühendisliği
Yazılım Mühendisliği</string>
    <string name="x">----------------------------</string>
</resources>