<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Uni">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/bone" />
            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/x"
                tools:ignore="DuplicateIds" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/unıone" />


            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/x"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView567"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/btwo" />
            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/x"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView5674"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/unıtwo" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/x"
                tools:ignore="DuplicateIds" />
        </LinearLayout>




    </ScrollView>

</LinearLayout>